moved about as homepage and disabled scrollbar on fixed navbar

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -15,6 +15,15 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
   padding: 0.2em 0;
 }
 
+body {
+  overflow: hidden;
+
+  .scrollbar {
+    margin-top: 84px;
+    overflow-y: scroll;
+  }
+}
+
 .navbar {
   .container-fluid{
     background-color: #6c5e53;
